@@ -1,0 +1,2 @@
+#!/bin/sh
+exec /usr/bin/cc -std=c99 ${1+"$@"}
